--- a/css/index.css
+++ b/css/index.css
@@ -3,60 +3,152 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 * {
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-size: 18px;
     margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
@@ -82,7 +174,7 @@ p {
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
 }
 
 .middle-content {
@@ -151,18 +243,21 @@ footer nav a {
 header {
     height: auto;
 }
+
 header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 25px auto;
 }
+
 header nav ul {
     display: flex;
     flex-grow: 1;
     justify-content: space-around;
     margin-top: 15px;
 }
+
 header nav li a {
     text-decoration: none;
     color: black;
@@ -177,30 +272,39 @@ section.top-content {
 .boxes .box:nth-child(1) {
     background: teal;
 }
+
 .boxes .box:nth-child(2) {
     background: gold;
 }
+
 .boxes .box:nth-child(3) {
     background: cadetblue;
 }
+
 .boxes .box:nth-child(4) {
     background: coral;
 }
+
 .boxes .box:nth-child(5) {
     background: crimson;
 }
+
 .boxes .box:nth-child(6) {
     background: forestgreen;
 }
+
 .boxes .box:nth-child(7) {
     background: darkorchid;
 }
+
 .boxes .box:nth-child(8) {
     background: hotpink;
 }
+
 .boxes .box:nth-child(9) {
     background: indigo;
 }
+
 .boxes .box:nth-child(10) {
     background: dodgerblue;
 }
@@ -210,14 +314,18 @@ section.top-content {
 main {
     margin: 20px 0;
 }
-main > div {
+
+main>div {
     margin: 0 15px;
 }
+
 .lets-work-together {
     padding: 20px 0;
 }
+
 /* Style middle boxes */
-.about-boxes {
+.about-boxes,
+.product-boxes {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -225,18 +333,22 @@ main > div {
     padding-top: 10px;
     border-top: 1px dashed black;
 }
-.about-boxes .about-box {
+
+.about-boxes .about-box,
+.product-boxes .product-box {
     width: 47%;
     padding: 15px 0;
     margin: 8px;
     border-bottom: 1px dashed black;
 }
+
 .about-box img {
     width: 100%;
     margin-bottom: 10px;
 }
+
 /* Learn more buttons */
-.learn-more-btn {
+.btn {
     display: inline-block;
     padding: 10px 20px;
     margin: 15px auto;
@@ -244,4 +356,72 @@ main > div {
     border-radius: 10px;
     text-decoration: none;
     color: black;
+}
+
+/* STRETCH GOALS */
+.comic * {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+.price {
+    display: inline-block;
+    color: green;
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+
+/* Animation */
+@keyframes fadeInFromBottom {
+    0% {
+      transform: translateY(10%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  
+  .product-box, .about-box {  
+    /* This section calls the slideInFromLeft animation we defined above */
+    animation: 1s ease-out 0s 1 fadeInFromBottom;
+  }
+
+/* Code below courtesy of https://www.w3schools.com/howto/howto_css_newsletter.asp */
+/* Style the form element with a border around it */
+form {
+    border: 4px solid #f1f1f1;
+}
+
+/* Add some padding and a grey background color to containers */
+.w3-container {
+    padding: 20px;
+    background-color: #f1f1f1;
+}
+
+/* Style the input elements and the submit button */
+input[type=text],
+input[type=submit] {
+    width: 100%;
+    padding: 12px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Add margins to the checkbox */
+input[type=checkbox] {
+    margin-top: 16px;
+}
+
+/* Style the submit button */
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+}
+
+input[type=submit]:hover {
+    opacity: 0.8;
 }
